--- a/Frontend-Project-Structure/src/index.css
+++ b/Frontend-Project-Structure/src/index.css
@@ -10,3 +10,13 @@ html, body, #root {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.main-content{
+  padding-top: 80px;
+}
+
+@media (max-width: 768px)  {
+  .main-content {
+    padding-top: 60px; /* Igual a la altura del navbar grande */
+  }
+}
